# floorboard-planner

./: .gitignore  index.html  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
solver/: Cargo.toml
solver/.cargo/: config.toml
solver/src/: config.rs  layout.rs  lib.rs  optimizer.rs  scorer.rs
src/: App.svelte
src/lib/analysis/: cutAnalyzer.ts
src/lib/components/: CutListPanel.svelte  ProjectSettings.svelte
src/lib/drawing/: FloorboardRow.svelte  floorboard.svelte
src/lib/export/: svgExport.ts
src/lib/history/: historyManager.ts
src/lib/import/: svgImport.ts
src/lib/storage/: projectStorage.ts
src/lib/stores/: history.svelte.ts  project.svelte.ts  solver.svelte.ts
src/lib/types/: project.ts
src/lib/workers/: solverWorker.ts
