[package]
name = "floorboard-solver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"
wasm-bindgen-rayon = "1.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = 3
lto = true
